--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,8 @@
-<div class="container-fluid footer text-center bg-dark  ">
-    <div class='row h-100'>
-      <div class='col my-auto py-2'>
-        <img src="../../assets/yf logo white transparent bg.png" alt="YoungFish Logo" class='footer-logo'>
-        &copy; YoungFish Solutions
-      </div>
+<div class="container-fluid footer text-center bg-dark  d-none d-md-block">
+  <div class='row h-100'>
+    <div class='col my-auto py-2'>
+      <img src="../../assets/yf logo white transparent bg.png" alt="YoungFish Logo" class='footer-logo'>
+      &copy; YoungFish Solutions
     </div>
   </div>
-  
+</div>
