--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,11 +1,37 @@
-<form [formGroup]="contactForm" (ngSubmit)="onSubmit()"><label>
-        Name: <input class='form-control' type="text" formControlName="name">
-    </label>
-    <label>
-        Email: <input class='form-control' type="text" formControlName="email">
-    </label>
-    <label>
-        Comments: <input class='form-control' type="text" formControlName="comments">
-    </label>
-    <button type="submit">Submit</button>
-</form>
+<div class="container">
+    <div class="row page">
+        <div class="col-12">
+            <p class='h1'>Contact Us</p>
+            <div class="row information-row">
+                <div class="col-lg-4 col-12">
+                    <div class="embed-responsive embed-responsive-1by1 mb-4">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13347.351504144448!2d-86.8221718!3d33.2445505!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1fab04b47be4348!2sAlabaster%20Church%20of%20God!5e0!3m2!1sen!2sus!4v1575341939463!5m2!1sen!2sus"
+                            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12">
+                    <p class="h4">Phone</p>
+                    <p>
+                        Church Office 205-663-9295<br />
+                        Pastor's Cell 205-588-9262
+                    </p>
+                    <p class="h4">Email</p>
+                    <p>
+                        <a href="mailto:pastorstroup@gmail.com">Pastor Ken Stroup</a><br />
+                    </p>
+                </div>
+                <div class="col-lg-4 col-12">
+                    <p>
+                        <b>Alabaster Church of God</b><br />
+                        530 1st Ave West<br />
+                        Alabaster, AL 35007
+                    </p>
+                </div>
+            </div>
+            <div class="row information-row">
+
+            </div>
+        </div>
+    </div>
+</div>
