--- a/src/app/details-modal/details-modal.component.scss
+++ b/src/app/details-modal/details-modal.component.scss
@@ -13,4 +13,9 @@
 
 .details {
     padding: 1rem;
+    max-height: 15rem;
+    overflow-y: scroll;
+    box-shadow: 0 -5px 5px -5px #333;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
 }
